--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "9",
     "core-js": "^3.6.5",
+    "postcss": "7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vuex": "^3.4.0"
